--- a/web/temp.css
+++ b/web/temp.css
@@ -5,10 +5,10 @@
 #card {
 	width: 250px;
 	height: 150px;
-	border: 2 solid black;
+	border: 4 solid #A0DDE5;
 	border-radius: 10px;
-	background-color: rgb(184, 219, 213);
-	color: black;
+	background-color: #0A438C;
+	color: #FDE227;
 	display: inline-table;
 	overflow: auto; 
 	margin: 5 5 5 5;
@@ -16,7 +16,7 @@
 }
 
 .orgName, #viewName {
-	color: rgb(200,50,200);
+	color: #FDE227;
 	font-size: 24;
 	font-weight: bolder;
 	text-align: center;
@@ -40,11 +40,11 @@
 
 #magview {
 	z-index: 100;
-	border: 2 solid black;
+	border: 4 solid #A0DDE5;
 	width: 350px;
 	border-radius: 10px;
-	background-color: rgb(184, 219, 213);
-	color: black;
+	background-color: #0A438C;
+	color: #FDE227;
 	display: table-header-group;
 	margin: 5 5 5 5;
 	word-wrap: break-word;
@@ -70,4 +70,8 @@ body {
 p {
 	opacity: 0.85;
 	color: grey;
+}
+
+a {
+	color: #FDE227;
 }
